--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,51 +39,26 @@
     <section class="content">
         <div class="container">
             <div class="row">
-                <form class="col">
+                <form class="col" method="post">
                     <p class="h5 text-center mb-4">Entrar</p>
                     <div class="md-form">
                         <i class="fa fa-envelope prefix grey-text"></i>
-                        <input type="text" id="orangeForm-email" class="form-control">
+                        <input type="text" id="orangeForm-email" class="form-control" name="email">
                         <label for="orangeForm-email">E-mail</label>
                     </div>
                 
                     <div class="md-form">
                         <i class="fa fa-lock prefix grey-text"></i>
-                        <input type="password" id="orangeForm-pass" class="form-control">
+                        <input type="password" id="orangeForm-pass" class="form-control" name="passwd">
                         <label for="orangeForm-pass">Senha</label>
+                        <% if (error){ %>
+                            <p><%= error %></p>
+                        <% } %>
                     </div>
                 
                     <div class="text-center">
                         <button class="btn btn-deep-orange">Entrar</button>
                     </div>
-                </form>
-                <form class="col" method="post" >
-                    <p class="h5 text-center mb-4">Criar uma conta</p>
-                
-                    <div class="md-form">
-                        <i class="fa fa-user prefix grey-text"></i>
-                        <input type="text" id="orangeForm-name" class="form-control" name="name">
-                        <label for="orangeForm-name">Seu nome</label>
-                    </div>
-                    <div class="md-form">
-                        <i class="fa fa-envelope prefix grey-text"></i>
-                        <input type="text" id="orangeForm-email" class="form-control" name="email">
-                        <label for="orangeForm-email">Seu e-mail</label>
-                        <% if (error){ %>
-                            <p>E-mail já cadastrado</p>
-                        <% } %>
-                    </div>
-                
-                    <div class="md-form">
-                        <i class="fa fa-lock prefix grey-text"></i>
-                        <input type="password" id="orangeForm-pass" class="form-control" name="passwd">
-                        <label for="orangeForm-pass">Sua senha</label>
-                    </div>
-                
-                    <div class="text-center">
-                        <button class="btn btn-deep-orange">Criar conta</button>
-                    </div>
-                </form>
             </div>
         </div>
     </section>
