--- a/views/elements/menu-items.ejs
+++ b/views/elements/menu-items.ejs
@@ -17,7 +17,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <% if(user.role === 'root') { %>
-                        <a class="dropdown-item" href="#">Gerenciar Jogos</a>
+                        <a class="dropdown-item" href="/admin/games">Gerenciar Jogos</a>
                     <% } %>
                     <a class="dropdown-item" href="#">Action</a>
                     <a class="dropdown-item" href="#">Another action</a>
