--- a/views/group.ejs
+++ b/views/group.ejs
@@ -30,7 +30,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
-                        <% include ../elements/menu-items %>
+                        <% include elements/menu-items %>
                 </div>
             </div>
         </nav>
@@ -40,50 +40,53 @@
         <div class="container">
             <div class="row">
             
-                <h2>Gerenciamento de Jogos</h2>
+                <h2>Grupo: <%= group.name %> </h2>
             
             </div>
-            <form class="row" method="post">                  
-                    <div class="md-form">
-                        <i class="fa fa-user prefix grey-text"></i>
-                        <input type="text"  class="form-control" name="team_a">
-                        <label for="orangeForm-name">Time A</label>
-                    </div>     
-                    <div class="md-form">
-                            <i class="fa fa-user prefix grey-text"></i>
-                            <input type="text"  class="form-control" name="team_b">
-                            <label for="orangeForm-name">Time B</label>
-                    </div>                 
-                    <div class="text-center">
-                        <button class="btn btn-deep-orange">Criar Jogo</button>
-                    </div>
-                </form>
-
-                <h3>Lista de Jogos</h3>
+                <h3>Lista de Usuários</h3>
+                <% if(group.role === 'owner') { %>
+                <% if(pendings.length > 0) { %>
                 <table class="table table-striped">
                     <thead>
                         <tr>
                             <th>#</th>
-                            <th>Jogos</th>
+                            <th>Usuário</th>
+                            <th>Perfil</th>
                             <th>Ações</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <% games.forEach( game => { %>
+                        <% pendings.forEach( user => { %>
 
                         
                         <tr>
-                            <th scope="row"><%= game.id %></th>
-                            <td><%= game.team_a %> vs <%= game.team_b %></td>
+                            <th scope="row"><%= user.id %></th>
+                            <td><a href="/groups/<%= user.id %>">
+                                    <%= user.name %>
+                                </a>
+                            </td>
+                            <td><%= user.role %></td>
                             <td>
-                                <a href="/admin/games/delete/<%= game.id %>">
-                                    Excluir
+                                <a href="/groups/<%= group.id %>/pending/<%= user.id %>/yes">
+                                    Permitir
+                                </a>
+                                <a href="/groups/<%= group.id %>/pending/<%= user.id %>/no">
+                                    Negar
                                 </a>
                             </td>
                         </tr>
                         <% }) %>
                     </tbody>
                 </table>
+                <% } else { %>
+                    <p class="alert alert-info">Nenhum usuário pendente!</p>
+                <% } %>
+                <% } %> 
+                <% if(group.role === 'pending') { %>
+                    <p class="alert alert-info">Aprovação pendente pelo Admin do Grupo.</p>
+                <% } else { %>
+                    <p>Usuário Normal</p>
+                <% } %>
         </div>
     </section>
     
