--- a/views/admin/games.ejs
+++ b/views/admin/games.ejs
@@ -60,6 +60,8 @@
                 </form>
 
                 <h3>Lista de Jogos</h3>
+
+                <form method="post" action="/admin/games/results">
                 <table class="table table-striped">
                     <thead>
                         <tr>
@@ -70,11 +72,13 @@
                     </thead>
                     <tbody>
                         <% games.forEach( game => { %>
-
-                        
-                        <tr>
+                          <tr>
                             <th scope="row"><%= game.id %></th>
-                            <td><%= game.team_a %> vs <%= game.team_b %></td>
+                            <td>
+                                <input class="form-control" name="team_<%= game.id %>[a]">
+                                <%= game.team_a %> vs <%= game.team_b %>
+                                <input class="form-control" name="team_<%= game.id %>[b]">
+                            </td>
                             <td>
                                 <a href="/admin/games/delete/<%= game.id %>">
                                     Excluir
@@ -84,6 +88,8 @@
                         <% }) %>
                     </tbody>
                 </table>
+                <input type="submit" value="Guardar Resultados">
+                </form>
         </div>
     </section>
     
