--- a/views/group.ejs
+++ b/views/group.ejs
@@ -85,7 +85,45 @@
                 <% if(group.role === 'pending') { %>
                     <p class="alert alert-info">Aprovação pendente pelo Admin do Grupo.</p>
                 <% } else { %>
-                    <p>Usuário Normal</p>
+                    <pre><%= JSON.stringify(games) %></pre>
+                    <form method="post">
+                    <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Jogos</th>
+                                    <th>Pontuação</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <% games.forEach( game => { %>      
+                                <tr>
+                                    
+                                    <td>
+                                        <% if(game.guess_a) { %>
+                                            <%= game.guess_a %>
+                                        <% } else { %>
+                                            
+                                            <input class="form-control" name="team_<%= game.id %>[a]"> 
+
+                                        <% } %>
+
+                                        <%= game.team_a %> vs <%= game.team_b %> 
+                                    
+                                        <% if(game.guess_b) { %>
+                                            <%= game.guess_b %>
+                                        <% } else{ %>  
+                                            <input class="form-control" name="team_<%= game.id %>[b]">
+                                        <% } %>
+
+                                    </td>
+                                    <td><%- game.score %></td>
+                                </tr>
+                                <% }) %>
+                            </tbody>
+                        </table>
+                        <input type="submit" value="Gravar Apostas">
+                        </form>
+
                 <% } %>
         </div>
     </section>
